# silo

./: .gitignore  README.md  pyproject.toml
silo/: .trace  cli.py  models.py
silo/scanner/: ai_detect.py  dependencies.py  files.py  language.py  registry.py  scan.py  secrets.py
