[project]
name = "silo"
version = "0.1.0"
description = "contain. defend. deploy."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
silo = "silo.cli:app"

[tool.setuptools.packages.find]
include = ["silo*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
